--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jinyindu/taro-lerna.git"
+  },
+  "scripts":{
+    "publish": "lerna publish"
   }
 }
